[package]
name = "pg_waldump"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.3"
enumname = { path = "../lib/enumname" }
enumname_derive = { path = "../lib/enumname_derive" }
clap = { version = "4.4.11", features = ["derive"] }
chrono = "0.4.31"
